[gd_scene load_steps=7 format=3 uid="uid://c0oscn1p3lae5"]

[ext_resource type="Script" path="res://scripts/selection.gd" id="1_8och6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kf372"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vyf20"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sm17c"]
bg_color = Color(0.427451, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8yhv5"]
bg_color = Color(0.427451, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6ak8g"]
bg_color = Color(0.6, 0.6, 0.458824, 1)

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_8och6")

[node name="MainMenuPanel" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_kf372")

[node name="Margin" type="MarginContainer" parent="MainMenuPanel"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenuPanel/Margin"]
layout_mode = 2
theme_override_constants/separation = 128

[node name="TitlePanel" type="PanelContainer" parent="MainMenuPanel/Margin/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MainMenuPanel/Margin/VBoxContainer/TitlePanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.705882, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0.705882, 0, 0, 1)
theme_override_font_sizes/font_size = 54
theme_override_styles/normal = SubResource("StyleBoxFlat_vyf20")
text = "爱丽丝的精神审判"

[node name="SelectionPanel" type="PanelContainer" parent="MainMenuPanel/Margin/VBoxContainer"]
layout_mode = 2

[node name="Margin" type="MarginContainer" parent="MainMenuPanel/Margin/VBoxContainer/SelectionPanel"]
layout_mode = 2

[node name="SelectionContainer" type="VBoxContainer" parent="MainMenuPanel/Margin/VBoxContainer/SelectionPanel/Margin"]
layout_mode = 2

[node name="StartButton" type="Button" parent="MainMenuPanel/Margin/VBoxContainer/SelectionPanel/Margin/SelectionContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_sm17c")
text = "开始"

[node name="ChapterSelectButton" type="Button" parent="MainMenuPanel/Margin/VBoxContainer/SelectionPanel/Margin/SelectionContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_8yhv5")
text = "章节选择"

[node name="SettingsButton" type="Button" parent="MainMenuPanel/Margin/VBoxContainer/SelectionPanel/Margin/SelectionContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_6ak8g")
text = "设置"

[connection signal="pressed" from="MainMenuPanel/Margin/VBoxContainer/SelectionPanel/Margin/SelectionContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MainMenuPanel/Margin/VBoxContainer/SelectionPanel/Margin/SelectionContainer/ChapterSelectButton" to="." method="_on_chapter_select_button_pressed"]
[connection signal="pressed" from="MainMenuPanel/Margin/VBoxContainer/SelectionPanel/Margin/SelectionContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
